test/corpus/blocks.txt
================================================================================
Headings of various levels
================================================================================
= One =
== Two ==
=== Three ===
====== Six ======
--------------------------------------------------------------------------------

(document
  (heading
    (heading_marker)
    (text)
    (heading_marker))
  (heading
    (heading_marker)
    (text)
    (heading_marker))
  (heading
    (heading_marker)
    (text)
    (heading_marker))
  (heading
    (heading_marker)
    (text)
    (heading_marker)))

================================================================================
Heading with markup inside
================================================================================
== The ''Battle'' of {{Year}} ==
--------------------------------------------------------------------------------

(document
  (heading
    (heading_marker)
    (text)
    (italic
      (text))
    (text)
    (template
      (template_name
        (text)))
    (text)
    (heading_marker)))

================================================================================
Equals sign in heading content
================================================================================
== E = mc2 ==
--------------------------------------------------------------------------------

(document
  (heading
    (heading_marker)
    (text)
    (text)
    (heading_marker)))

================================================================================
Not a heading: no closing run
================================================================================
== not a heading
--------------------------------------------------------------------------------

(document
  (text))

================================================================================
Not a heading: mid-line equals
================================================================================
x == y ==
--------------------------------------------------------------------------------

(document
  (text)
  (text))

================================================================================
Lists
================================================================================
* one
** nested
# numbered
#* mixed
: indent
; definition
--------------------------------------------------------------------------------

(document
  (list_item
    (list_marker)
    (text))
  (list_item
    (list_marker)
    (text))
  (list_item
    (list_marker)
    (text))
  (list_item
    (list_marker)
    (text))
  (list_item
    (list_marker)
    (text))
  (list_item
    (list_marker)
    (text)))

================================================================================
Horizontal rule
================================================================================
----
-----
--------------------------------------------------------------------------------

(document
  (horizontal_rule)
  (horizontal_rule))

================================================================================
Dashes that are not a rule
================================================================================
a -- b
---
--------------------------------------------------------------------------------

(document
  (text)
  (text))

================================================================================
Indent preformatted
================================================================================
 preformatted line
normal line
--------------------------------------------------------------------------------

(document
  (preformatted
    (text))
  (text))

================================================================================
Redirect
================================================================================
#REDIRECT [[Main Page]]
--------------------------------------------------------------------------------

(document
  (redirect
    (redirect_keyword)
    (text)
    (wikilink
      (link_target
        (text)))))

================================================================================
Blank lines
================================================================================
one


two
--------------------------------------------------------------------------------

(document
  (text)
  (text))
