test/corpus/html_ext.txt
================================================================================
HTML tags
================================================================================
<div class="box"><span style="color: red">text</span></div>
--------------------------------------------------------------------------------

(document
  (html_tag
    (tag_name)
    (attribute
      (attribute_name)
      (attribute_value)))
  (html_tag
    (tag_name)
    (attribute
      (attribute_name)
      (attribute_value)))
  (text)
  (html_tag
    (tag_name))
  (html_tag
    (tag_name)))

================================================================================
Self-closing and void tags
================================================================================
a<br/>b<br>c<hr />
--------------------------------------------------------------------------------

(document
  (text)
  (html_tag
    (tag_name))
  (text)
  (html_tag
    (tag_name))
  (text)
  (html_tag
    (tag_name)))

================================================================================
Wikitext inside HTML
================================================================================
<div>{{tmpl}} and [[link]] and '''bold'''</div>
--------------------------------------------------------------------------------

(document
  (html_tag
    (tag_name))
  (template
    (template_name
      (text)))
  (text)
  (wikilink
    (link_target
      (text)))
  (text)
  (bold
    (text))
  (html_tag
    (tag_name)))

================================================================================
Template inside attribute value
================================================================================
<div class="{{cls}}">x</div>
--------------------------------------------------------------------------------

(document
  (html_tag
    (tag_name)
    (attribute
      (attribute_name)
      (attribute_value)))
  (text)
  (html_tag
    (tag_name)))

================================================================================
Less-than that is not a tag
================================================================================
3 < 5 and x <3
--------------------------------------------------------------------------------

(document
  (text)
  (text)
  (text))

================================================================================
Transparent extension tag keeps wikitext
================================================================================
<ref name="a">{{cite web|url=https://example.com|title=T}}</ref>
--------------------------------------------------------------------------------

(document
  (html_tag
    (tag_name)
    (attribute
      (attribute_name)
      (attribute_value)))
  (template
    (template_name
      (text))
    (template_argument
      (argument_name
        (text))
      (url))
    (template_argument
      (argument_name
        (text))
      (text)))
  (html_tag
    (tag_name)))

================================================================================
Includeonly and noinclude are transparent
================================================================================
<includeonly>{{x}}</includeonly><noinclude>[[Category:Doc]]</noinclude>
--------------------------------------------------------------------------------

(document
  (html_tag
    (tag_name))
  (template
    (template_name
      (text)))
  (html_tag
    (tag_name))
  (html_tag
    (tag_name))
  (wikilink
    (link_target
      (text)))
  (html_tag
    (tag_name)))

================================================================================
Nowiki content is raw
================================================================================
<nowiki>'''not bold''' {{not a template}}</nowiki>
--------------------------------------------------------------------------------

(document
  (ext_tag
    (tag_name)
    (raw_text)
    (tag_name)))

================================================================================
Templatedata content is raw
================================================================================
<templatedata>
{ "params": { "1": { "label": "First" } } }
</templatedata>
--------------------------------------------------------------------------------

(document
  (ext_tag
    (tag_name)
    (raw_text)
    (tag_name)))

================================================================================
Syntaxhighlight with language attribute
================================================================================
<syntaxhighlight lang="python">
def f(x):
    return x < 2
</syntaxhighlight>
--------------------------------------------------------------------------------

(document
  (ext_tag
    (tag_name)
    (attribute
      (attribute_name)
      (attribute_value))
    (raw_text)
    (tag_name)))

================================================================================
Math content is raw
================================================================================
<math>\sum_{i=0}^n i^2</math>
--------------------------------------------------------------------------------

(document
  (ext_tag
    (tag_name)
    (raw_text)
    (tag_name)))

================================================================================
Self-closing raw tag
================================================================================
<nowiki/>
--------------------------------------------------------------------------------

(document
  (ext_tag
    (tag_name)))

================================================================================
Pre with fake close tag inside
================================================================================
<pre>a </premature> b</pre>
--------------------------------------------------------------------------------

(document
  (ext_tag
    (tag_name)
    (raw_text)
    (tag_name)))

================================================================================
Unknown tags are prose
================================================================================
<notatag> and </notatag> and <id:liquid>
--------------------------------------------------------------------------------

(document
  (text)
  (text)
  (text)
  (text)
  (text))
