test/corpus/inline.txt
================================================================================
Plain paragraph
================================================================================
Just some plain text.
--------------------------------------------------------------------------------

(document
  (text))

================================================================================
Bold and italic
================================================================================
'''bold''' and ''italic'' text
--------------------------------------------------------------------------------

(document
  (bold
    (text))
  (text)
  (italic
    (text))
  (text))

================================================================================
Bold italic combined
================================================================================
'''''both'''''
--------------------------------------------------------------------------------

(document
  (italic
    (bold
      (text))))

================================================================================
Bold containing italic
================================================================================
'''bold ''and italic'' more'''
--------------------------------------------------------------------------------

(document
  (bold
    (text)
    (italic
      (text))
    (text)))

================================================================================
Unclosed bold auto-closes at end of line
================================================================================
'''unclosed bold
next line
--------------------------------------------------------------------------------

(document
  (bold
    (text))
  (text))

================================================================================
Apostrophes in words
================================================================================
don't stop l'amour
--------------------------------------------------------------------------------

(document
  (text)
  (text)
  (text))

================================================================================
Four apostrophes: stray apostrophe plus bold
================================================================================
''''four''''
--------------------------------------------------------------------------------

(document
  (bold
    (text)))

================================================================================
HTML entity
================================================================================
a &amp; b &#160; c &#x0A; d
--------------------------------------------------------------------------------

(document
  (text)
  (entity)
  (text)
  (entity)
  (text)
  (entity)
  (text))

================================================================================
Behavior switch
================================================================================
__NOTOC__ text __TOC__
--------------------------------------------------------------------------------

(document
  (behavior_switch)
  (text)
  (behavior_switch))

================================================================================
Signatures
================================================================================
~~~ and ~~~~ and ~~~~~
--------------------------------------------------------------------------------

(document
  (signature)
  (text)
  (signature)
  (text)
  (signature))

================================================================================
Comment
================================================================================
before <!-- hidden --> after
--------------------------------------------------------------------------------

(document
  (text)
  (comment)
  (text))

================================================================================
Multiline comment
================================================================================
before <!-- one
two --> after
--------------------------------------------------------------------------------

(document
  (text)
  (comment)
  (text))

================================================================================
Stray special characters as text
================================================================================
5 > 3 < 7 = x & y! [z] {w} #5 a-b under_score ~x
--------------------------------------------------------------------------------

(document
  (text)
  (text)
  (text)
  (text)
  (text)
  (text)
  (text)
  (text)
  (text)
  (text)
  (text)
  (text)
  (text)
  (text))
