test/corpus/langconv.txt
================================================================================
Language converter block
================================================================================
-{zh-hans:计算机;zh-hant:電腦}-
--------------------------------------------------------------------------------

(document
  (language_converter
    (text)
    (text)
    (text)))

================================================================================
Language converter with flags
================================================================================
-{T|zh-hans:标题;zh-hant:標題}-
--------------------------------------------------------------------------------

(document
  (language_converter
    (text)
    (text)
    (text)
    (text)))

================================================================================
Plain hyphen-brace text is not a converter without close
================================================================================
a - b {c}
--------------------------------------------------------------------------------

(document
  (text)
  (text)
  (text))
