test/corpus/links.txt
================================================================================
Simple wikilink
================================================================================
[[Main Page]]
--------------------------------------------------------------------------------

(document
  (wikilink
    (link_target
      (text))))

================================================================================
Piped wikilink
================================================================================
[[Main Page|the main page]]
--------------------------------------------------------------------------------

(document
  (wikilink
    (link_target
      (text))
    (text)))

================================================================================
Wikilink with namespace and anchor
================================================================================
[[Help:Contents#Section]]
--------------------------------------------------------------------------------

(document
  (wikilink
    (link_target
      (text)
      (text))))

================================================================================
File link with options and caption
================================================================================
[[File:Example.jpg|thumb|300px|A caption with [[link]] inside]]
--------------------------------------------------------------------------------

(document
  (wikilink
    (link_target
      (text))
    (text)
    (text)
    (text)
    (wikilink
      (link_target
        (text)))
    (text)))

================================================================================
Category link
================================================================================
[[Category:Things]]
--------------------------------------------------------------------------------

(document
  (wikilink
    (link_target
      (text))))

================================================================================
Wikilink with template in target
================================================================================
[[{{FULLPAGENAME}}/doc]]
--------------------------------------------------------------------------------

(document
  (wikilink
    (link_target
      (template
        (template_name
          (text)))
      (text))))

================================================================================
External link bare
================================================================================
[https://example.com/page]
--------------------------------------------------------------------------------

(document
  (external_link
    (url)))

================================================================================
External link with label
================================================================================
[https://example.com/page the label]
--------------------------------------------------------------------------------

(document
  (external_link
    (url)
    (link_label
      (text))))

================================================================================
Bare URL autolink
================================================================================
See https://example.com/a?b=c for details.
--------------------------------------------------------------------------------

(document
  (text)
  (url)
  (text))

================================================================================
Autolink trailing punctuation excluded
================================================================================
Go to https://example.com/x.
--------------------------------------------------------------------------------

(document
  (text)
  (url)
  (text))

================================================================================
Magic links
================================================================================
ISBN 978-0-306-40615-7 and RFC 2324 and PMID 12345678
--------------------------------------------------------------------------------

(document
  (magic_link)
  (text)
  (magic_link)
  (text)
  (magic_link))

================================================================================
Not a magic link mid-word
================================================================================
xISBN 123 and ISBNs everywhere
--------------------------------------------------------------------------------

(document
  (text))

================================================================================
Brackets that are not links
================================================================================
[not a link] in text
--------------------------------------------------------------------------------

(document
  (text)
  (text))
