test/corpus/templates.txt
================================================================================
Simple template
================================================================================
{{foo}}
--------------------------------------------------------------------------------

(document
  (template
    (template_name
      (text))))

================================================================================
Template with positional and named arguments
================================================================================
{{foo|bar|name=value}}
--------------------------------------------------------------------------------

(document
  (template
    (template_name
      (text))
    (template_argument
      (text))
    (template_argument
      (argument_name
        (text))
      (text))))

================================================================================
Nested templates
================================================================================
{{outer|{{inner|x}}|y}}
--------------------------------------------------------------------------------

(document
  (template
    (template_name
      (text))
    (template_argument
      (template
        (template_name
          (text))
        (template_argument
          (text))))
    (template_argument
      (text))))

================================================================================
Template spanning lines
================================================================================
{{Infobox
| name = Widget
| type = Gadget
}}
--------------------------------------------------------------------------------

(document
  (template
    (template_name
      (text))
    (template_argument
      (argument_name
        (text))
      (text))
    (template_argument
      (argument_name
        (text))
      (text))))

================================================================================
Template parameter
================================================================================
{{{1}}}
--------------------------------------------------------------------------------

(document
  (parameter
    (parameter_name
      (text))))

================================================================================
Template parameter with default
================================================================================
{{{name|default text}}}
--------------------------------------------------------------------------------

(document
  (parameter
    (parameter_name
      (text))
    (text)))

================================================================================
Parameter default containing template
================================================================================
{{{1|{{fallback}}}}}
--------------------------------------------------------------------------------

(document
  (parameter
    (parameter_name
      (text))
    (template
      (template_name
        (text)))))

================================================================================
Parser function
================================================================================
{{#if: {{{1|}}} | yes | no }}
--------------------------------------------------------------------------------

(document
  (parser_function
    (parser_function_name)
    (text)
    (parameter
      (parameter_name
        (text)))
    (text)
    (template_argument
      (text))
    (template_argument
      (text))))

================================================================================
Parser function invoke
================================================================================
{{#invoke:Module|main|arg}}
--------------------------------------------------------------------------------

(document
  (parser_function
    (parser_function_name)
    (text)
    (template_argument
      (text))
    (template_argument
      (text))))

================================================================================
Parameter inside template argument
================================================================================
{{foo|{{{1}}}|x={{{2|}}}}}
--------------------------------------------------------------------------------

(document
  (template
    (template_name
      (text))
    (template_argument
      (parameter
        (parameter_name
          (text))))
    (template_argument
      (argument_name
        (text))
      (parameter
        (parameter_name
          (text))))))

================================================================================
Template with list in argument
================================================================================
{{foo|
* one
* two
}}
--------------------------------------------------------------------------------

(document
  (template
    (template_name
      (text))
    (template_argument
      (list_item
        (list_marker)
        (text))
      (list_item
        (list_marker)
        (text)))))

================================================================================
Template name with hyphens and equals in value
================================================================================
{{convert-to|x=a=b}}
--------------------------------------------------------------------------------

(document
  (template
    (template_name
      (text)
      (text))
    (template_argument
      (argument_name
        (text))
      (text)
      (text))))
